syntax = "proto3";

option csharp_namespace = "Art.Framework.ApiNetwork.Grpc.Api.Deck";

import "proto/data.proto";

package apb.api.deck;

service DeckService {
	rpc UpdateName (UpdateNameRequest) returns (UpdateNameResponse);
	rpc ReplaceDeck (ReplaceDeckRequest) returns (ReplaceDeckResponse);
	//rpc CopyDeck (CopyDeckRequest) returns (CopyDeckResponse);
	rpc RemoveDeck (RemoveDeckRequest) returns (RemoveDeckResponse);
}

message UpdateNameRequest {
	int32 deckType = 1;
	int32 userDeckNumber = 2;
	string name = 3;
}

message UpdateNameResponse {
	map<string, apb.api.data.DiffData> diffUserData = 99;
}

message ReplaceDeckRequest {
	int32 deckType = 1;
	int32 userDeckNumber = 2;
	Deck deck = 3;
}

message ReplaceDeckResponse {
	map<string, apb.api.data.DiffData> diffUserData = 99;
}

message RemoveDeckRequest {
	int32 deckType = 1;
	int32 userDeckNumber = 2;
}

message RemoveDeckResponse {
	map<string, apb.api.data.DiffData> diffUserData = 99;
}

message Deck {
	DeckCharacter character01 = 1;
	DeckCharacter character02 = 2;
	DeckCharacter character03 = 3;
}

message DeckCharacter {
	string userCostumeUuid = 1;
	string mainUserWeaponUuid = 2;
	repeated string subUserWeaponUuid = 3;
	string userCompanionUuid = 4;
	repeated string userPartsUuid = 5;
	int32 userDressupId = 6;
	string userThoughtUuid = 7;
}
